--- a/PROJET PHP/views/css/stylesheet.css
+++ b/PROJET PHP/views/css/stylesheet.css
@@ -1,25 +1,39 @@
 :root {
-  --background:#00171c;
+  --background:#112d33e2;
 }
 
-body {
+.backgroundcolor {
   background-color: var(--background);
 }
 
+body
+{
+  margin: 0 100px;
+  background-image: url("https://cdn.dribbble.com/users/213309/screenshots/13754453/media/71fe3d657f6cc58907c7ed013e9d07ad.png?compress=1&resize=1600x1200&vertical=top");
+}
 .homepage{
   background-color: #953a28;
 }
 
 .affichagemedia {
   border: 1px solid #ecab3f;
+  color: wheat;
   width: 50%;
   margin: auto;
   margin: 50px auto 0 auto;
   padding: 25px;
   border-radius: 5px;
-  background-color: #0e1f29;
+  background-color: #0e1f29d9;
   text-align: center;
   
+}
+
+.barre{
+  color: #953a28;
+}
+
+nav{
+  color: wheat;
 }
 
 li{
@@ -32,7 +46,7 @@ li{
 
 ul{
   text-align: center;
-  background-color:#422924;
+  background-color:#0d061ae0;
 }
 
 .afffilmhome{
@@ -51,11 +65,19 @@ h1 {
   font-family: "Bebas Neue", cursive;
   color: #ba852a;
   font-size: xxx-large;
+  text-align: center;
+}
+
+h2 {
+  font-family: "Bebas Neue", cursive;
+  color: #ba852a;
+  font-size: xxx-large;
+  text-align: center;
 }
 
 p {
   font-family: "Bebas Neue", cursive;
-  color: #9f521a;
+  color: #d8b093;
   text-align: center;
   font-size: x-large;
 }
@@ -82,18 +104,18 @@ p {
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
+
 a{
     position: relative;
     display: inline-block;
     padding: 25px 30px;
     margin: 50px 0;
-    color: #1c1000;
+    color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
     transition: 0.5s;
     letter-spacing: 4px;
     overflow: hidden;
-    margin-right: 50px;
 }
 a:hover{
     background: #ba852a;
@@ -104,3 +126,29 @@ a:hover{
                 0 0 200px #ba852a;
      -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
 } 
+
+figcaption {
+  margin-top: 10%;
+  font-weight: bold;
+}
+
+/* type affichage image dans liste */
+
+.afflist img
+{
+  width: 350px;
+  height: 500px;
+}
+
+section{
+
+  text-align: center;
+
+}
+
+.hello{
+  position: relative;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+}
